# position-pilot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  TESTING_ROLL_TRACKING.md  main.py  pyproject.toml  test_rolls.py
.codex/skills/position-pilot-codex-orchestrator/: SKILL.md
.grok/: position-pilot-implementation.md
docs/: IMPLEMENTATION_PLAN.md  PRD.md  STREAMING_PROTOCOL.md
docs/wayfinder/: map.md
docs/wayfinder/tickets/: 000-confirmed-requirements.md  010-web-foundation.md  020-domain-snapshots.md  030-streaming-providers.md  040-feature-parity.md  050-catalysts.md  060-codex-monitoring.md  070-hardening-retirement.md  080-tasty-mechanics.md
frontend/: .gitignore  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  CatalystRiskGauge.tsx  OperationsPanel.tsx  accountDisplay.ts  api.ts  catalystRisk.ts  livePnl.ts  positionGroups.ts  rollLedger.ts  styles.css  types.ts
frontend/tests/: accountDisplay.spec.ts  catalystRisk.spec.ts  dashboard.spec.ts  inactiveAccounts.spec.ts  livePnl.spec.ts  phase7-a11y.spec.ts  positionGroups.spec.ts  rollLedger.spec.ts
src/position_pilot/: __init__.py  cache.py  cli.py  config.py
src/position_pilot/analysis/: __init__.py  llm_signals.py  market.py  recommendation_cache.py  roll_analytics.py  roll_history.py  roll_tracker.py  signals.py  strategies.py
src/position_pilot/client/: __init__.py  tastytrade.py
src/position_pilot/dashboard/: __init__.py  app.py
src/position_pilot/domain/: __init__.py  accounts.py  alerts.py  catalysts.py  factory.py  market.py  mechanics.py  monitoring.py  notifications.py  operations.py  orders.py  plans.py  portfolio.py  (+6 more)
tests/: __init__.py  test_calculation_regression.py  test_catalyst_api.py  test_catalysts.py  test_codex_provider.py  test_dashboard_command.py  test_live_state.py  test_live_tastytrade_smoke.py  test_market_service.py  test_massive_provider.py  test_mechanics.py  test_mechanics_api.py  test_monitoring.py  test_operations.py  test_order_parsing.py  test_order_timestamp_parsing.py  test_orders_service.py  test_packaging_sdist.py  test_parity_api.py  test_plans_service.py  test_portfolio_service.py  test_position_mark_pnl.py  test_provider_routing.py  test_public_web_provider.py  test_recommendation_api.py  test_recommendations.py  test_reconciliation.py  test_risk_service.py  test_roll_adjusted_pnl.py  test_roll_analytics_service.py  test_roll_regression.py  test_roll_service.py  test_scale_performance.py  test_snapshot_repository.py  test_sqlite_connection_lifecycle.py  test_strategy_regression.py  test_streaming_protocols.py  test_streaming_service.py  test_watchlist_service.py  test_web_app.py  (+1 more)
(+76 files in other folders)
