[project]
name = "position-pilot"
version = "0.1.0"
description = "Local, read-only portfolio workstation for Tastytrade options traders"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pytz>=2024.1",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "websockets>=15.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.11.0",
]

[project.scripts]
pilot = "position_pilot.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/position_pilot"]
# Prebuilt React frontend ships with the Python package so end users need only Python/uv.
artifacts = [
    "src/position_pilot/web/static/**",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/position_pilot",
    "frontend/package.json",
    "frontend/pnpm-lock.yaml",
    "frontend/src",
    "frontend/index.html",
    "frontend/vite.config.ts",
    "frontend/tsconfig.json",
    "frontend/tsconfig.app.json",
    "frontend/tsconfig.node.json",
    "frontend/playwright.config.ts",
    "frontend/tests",
    "README.md",
    "pyproject.toml",
    "docs",
]
exclude = [
    "frontend/node_modules",
    "frontend/node_modules/**",
    "frontend/dist",
    "frontend/dist/**",
    "frontend/test-results",
    "frontend/test-results/**",
    "frontend/playwright-report",
    "frontend/playwright-report/**",
    "frontend/blob-report",
    "frontend/blob-report/**",
    "frontend/**/*.png",
    "**/.cache",
    "**/.cache/**",
    "**/__pycache__",
    "**/__pycache__/**",
    "**/.pytest_cache",
    "**/.pytest_cache/**",
    "**/test-results/**",
    "**/playwright-report/**",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
